--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <title>Sehas | Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBv6kl4UGSGqt4RsOdp-nyoSPOKKOdLSio",
+      authDomain: "portfolio-d080c.firebaseapp.com",
+      projectId: "portfolio-d080c",
+      storageBucket: "portfolio-d080c.firebasestorage.app",
+      messagingSenderId: "942034711703",
+      appId: "1:942034711703:web:b1a3bc277a65e4ba5ba5d2",
+      measurementId: "G-V1DHYMWCMT"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
